JSW Devsb/src/objects/MonthlySalesSummarySNAP__c.object
<CustomObject>
    <fields>
        <fullName>DistChannel__c</fullName>
        <label>DistChannel</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InterfaceDateTime__c</fullName>
        <label>InterfaceDateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Month__c</fullName>
        <label>Month</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductGroup__c</fullName>
        <label>ProductGroup</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SalesDistrict__c</fullName>
        <label>SalesDistrict</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <label>MonthlySalesSummarySNAP</label>
    <nameField>
        <displayFormat>{YYYY}{MM}-{0}</displayFormat>
        <label>MonthlySalesSummarySNAP Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MonthlySalesSummariesSNAP</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>